# CV-2024-final-project

./: .gitignore  CMakeLists.txt
include/: ball_classification.hpp  ball_detection.hpp  ball_tracking.hpp  field_detection.h  field_detection.hpp  functions.h  measurements.hpp  minimap.hpp
include-old/: ball_detection.hpp  field_detection.hpp  functions.h
old/: cannymain.cpp  failmain.cpp  main (copy).cpp
src/: ball_classification.cpp  ball_detection.cpp  ball_tracking.cpp  field_detection.cpp  functions.cpp  main.cpp  measurements.cpp  minimap.cpp
src/old/: main2.cpp
